feat: add/remove commentary

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: harndt <harndt@student.42sp.org.br>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/23 11:00:48 by harndt            #+#    #+#              #
-#    Updated: 2023/01/30 16:22:17 by harndt           ###   ########.fr        #
+#    Updated: 2023/02/02 11:28:10 by harndt           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CC			:=	cc
 CFLAGS		:=	#-Wall -Werror -Wextra 
 HEADERS		:=	includes
 SRCS		:=	sources/philo.c	utils/ft_atoi.c	utils/ft_isdigit.c	\
-				utils/ft_isnum.c
+				utils/ft_isnum.c	utils/ft_time.c	utils/ft_usleep.c
 
 OBJS		:=	$(SRCS:.c=.o)
 
