--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,6 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-./test_results
+test_results/
 
 # End of https://www.toptal.com/developers/gitignore/api/c
